--- a/pages/_template.html
+++ b/pages/_template.html
@@ -1,48 +1,5 @@
-<!-- /site/pages/_template.html -->
-<!DOCTYPE html>
-<html lang="en">
-<head>
-  <!-- Reusable Page Template — duplicate this file for new pages -->
-  <meta charset="utf-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title><!-- Replace with Page Title --></title>
-
-  <link rel="stylesheet" href="/assets/css/variables.css?v=20251124162559" />
-  <link rel="stylesheet" href="/assets/css/main.css?v=20251124162559" />
-  <!-- Favicon + Icons -->
-  <link rel="icon" href="/assets/img/favicon/favicon.ico" type="image/x-icon">
-  <link rel="shortcut icon" href="/assets/img/favicon/favicon.ico" type="image/x-icon">
-
-  <link rel="icon" type="image/png" sizes="96x96" href="/assets/img/favicon/favicon-96.png">
-  <link rel="icon" type="image/png" sizes="192x192" href="/assets/img/favicon/favicon-192.png">
-  <link rel="apple-touch-icon" sizes="180x180" href="/assets/img/favicon/favicon-180.png">
-  <link rel="icon" type="image/png" sizes="512x512" href="/assets/img/favicon/favicon-512.png">
-
-  <!-- Social / OpenGraph defaults -->
-  <meta property="og:title" content="The Butterfly Layer — L8">
-  <meta property="og:description" content="Where intent, architecture, and elegance shape networks of the future.">
-  <meta property="og:image" content="/assets/img/social/default-share.png">
-  <meta name="twitter:image" content="/assets/img/social/default-share.png">
-  <!-- Add page-specific CSS only when needed (e.g., podcast.css) -->
-</head>
-<body id="top">
-  <div id="header"></div>
-
-  <main id="main" role="main">
-    <header class="page-header container">
-      <h1><!-- Page Heading --></h1>
-      <p class="page-intro"><!-- Optional intro --></p>
-    </header>
-
+<!-- BEGIN: /site/pages/_template.html -->
     <section class="container flow">
       <!-- Page content -->
     </section>
-  </main>
-
-  <div id="footer"></div>
-
-  <script src="/assets/js/quotes.js?v=20251124162559" defer></script>
-  <script src="/assets/js/loader.js?v=20251124162559" defer></script>
-  <!-- Page-specific JS below if needed -->
-</body>
-</html>
+<!-- END: /site/pages/_template.html -->
