--- a/pages/contact/index.html
+++ b/pages/contact/index.html
@@ -1,53 +1,82 @@
-<!-- /site/pages/contact/index.html -->
-<!DOCTYPE html>
+<!-- BEGIN: content/partials/layout.html -->
+<!doctype html>
 <html lang="en">
-<head>
-  <meta charset="utf-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Contact — The Butterfly Layer</title>
-  <meta name="description" content="Contact L8 — The Butterfly Layer. Advisory, speaking, and collaborations at the human layer of the network.">
-  <link rel="stylesheet" href="/assets/css/variables.css?v=20251124162559" />
-  <link rel="stylesheet" href="/assets/css/main.css?v=20251124162559" />
-  <!-- Favicon + Icons -->
-  <link rel="icon" href="/assets/img/favicon/favicon.ico" type="image/x-icon">
-  <link rel="shortcut icon" href="/assets/img/favicon/favicon.ico" type="image/x-icon">
+  <head>
+    <!-- BEGIN: content/partials/head.html -->
+<meta charset="utf-8">
+<meta name="viewport" content="width=device-width, initial-scale=1">
 
-  <link rel="icon" type="image/png" sizes="96x96" href="/assets/img/favicon/favicon-96.png">
-  <link rel="icon" type="image/png" sizes="192x192" href="/assets/img/favicon/favicon-192.png">
-  <link rel="apple-touch-icon" sizes="180x180" href="/assets/img/favicon/favicon-180.png">
-  <link rel="icon" type="image/png" sizes="512x512" href="/assets/img/favicon/favicon-512.png">
+<title>Contact — Jennifer Bowman | L8: The Butterfly Layer</title>
+<meta name="description" content="Get in touch with Jennifer Bowman for architecture, mentoring, speaking, or collaboration inquiries.">
 
-  <!-- Social / OpenGraph defaults -->
-  <meta property="og:title" content="The Butterfly Layer — L8">
-  <meta property="og:description" content="Where intent, architecture, and elegance shape networks of the future.">
-  <meta property="og:image" content="/assets/img/social/default-share.png">
-  <meta name="twitter:image" content="/assets/img/social/default-share.png">
-</head>
-<body id="top">
-  <div id="header"></div>
+<!-- Open Graph -->
+<meta property="og:type" content="website">
+<meta property="og:title" content="Contact — L8: The Butterfly Layer">
+<meta property="og:description" content="Contact information for Jennifer Bowman and L8: The Butterfly Layer.">
+<meta property="og:image" content="/assets/img/social/og-default.png">
+<meta property="og:url" content="https://butterflylayer.com/contact/">
+<meta property="og:site_name" content="L8: The Butterfly Layer">
 
-  <main id="main" role="main">
-    <header class="page-header container">
-      <h1>Contact</h1>
-      <p class="page-intro">Advisory, speaking, and collaborations focused on Layer 8 architecture.</p>
-    </header>
+<!-- Twitter -->
+<meta name="twitter:card" content="summary_large_image">
+<meta name="twitter:title" content="Contact — L8: The Butterfly Layer">
+<meta name="twitter:description" content="Contact information for Jennifer Bowman and L8: The Butterfly Layer.">
+<meta name="twitter:image" content="/assets/img/social/og-default.png">
 
-    <section class="container flow">
-      <h2>Email</h2>
-      <p><a href="mailto:hello@butterflylayer.com">hello@butterflylayer.com</a></p>
+<!-- Primary styles -->
+<link rel="stylesheet" href="/assets/css/variables.css?v=20251125232252">
+<link rel="stylesheet" href="/assets/css/main.css?v=20251125232252">
+<link rel="stylesheet" href="/assets/css/podcast.css?v=20251125232252">
 
-      <h2>Social</h2>
-      <ul>
-        <li><a href="https://www.linkedin.com/in/butterflylayer/" rel="noopener">LinkedIn</a></li>
-        <li class="hidden"><a href="https://www.youtube.com/" rel="noopener">YouTube</a></li>
-        <li><a href="https://x.com/butterflylayer" target="_blank" rel="noopener">Twitter</a></li>
-      </ul>
+<!-- Page-specific scripts (optional) -->
+
+
+<!-- Shared scripts -->
+<script src="/assets/js/quotes.js?v=20251125232252" defer></script>
+<script src="/assets/js/loader.js?v=20251125232252" defer></script>
+
+<!-- END: content/partials/head.html -->
+
+  </head>
+  <body id="top">
+    <div id="construction-banner-slot"></div>
+    <div id="header"></div>
+
+    <main id="main-content">
+      <!-- BEGIN: content/partials/page_header.html -->
+<header class="page-header">
+  <div class="container flow">
+    <h1>Contact</h1>
+    <p class="page-intro">Reach out for architecture conversations, mentoring, speaking, or collaborative projects.</p>
+  </div>
+</header>
+<!-- END: content/partials/page_header.html -->
+ 
+      <!-- BEGIN: /content/pages/contact.html -->
+    <section class="page-section">
+      <div class="container">
+        <h2>Email</h2>
+        <p><a href="mailto:hello@butterflylayer.com">hello@butterflylayer.com</a></p>
+
+        <h2>Social</h2>
+        <ul>
+          <li><a href="https://www.linkedin.com/in/butterflylayer/" rel="noopener">LinkedIn</a></li>
+          <li class="hidden"><a href="https://www.youtube.com/" rel="noopener">YouTube</a></li>
+          <li><a href="https://x.com/butterflylayer" target="_blank" rel="noopener">Twitter</a></li>
+        </ul>
+      </div>
     </section>
-  </main>
+<!-- END: /content/pages/contact.html -->
+    </main>
 
-  <div id="footer"></div>
+    <!-- Back to top / subtle footer helper -->
+    <section class="page-section backtotop">
+      <div class="container">
+        <a href="#construction-banner-slot">Back to Top</a>
+      </div>
+    </section>
 
-  <script src="/assets/js/loader.js?v=20251124162559" defer></script>
-  <script src="/assets/js/quotes.js?v=20251124162559" defer></script>
-</body>
+    <div id="footer"></div>
+  </body>
 </html>
+<!-- END: content/partials/layout.html -->
