--- a/pages/press/index.html
+++ b/pages/press/index.html
@@ -1,38 +1,58 @@
-<!-- /site/pages/press/index.html -->
-<!DOCTYPE html>
+<!-- BEGIN: content/partials/layout.html -->
+<!doctype html>
 <html lang="en">
-<head>
-  <meta charset="utf-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Press — L8 The Butterfly Layer</title>
+  <head>
+    <!-- BEGIN: content/partials/head.html -->
+<meta charset="utf-8">
+<meta name="viewport" content="width=device-width, initial-scale=1">
 
-  <link rel="stylesheet" href="/assets/css/variables.css?v=20251124162559" />
-  <link rel="stylesheet" href="/assets/css/main.css?v=20251124162559" />
-  <!-- Favicon + Icons -->
-  <link rel="icon" href="/assets/img/favicon/favicon.ico" type="image/x-icon">
-  <link rel="shortcut icon" href="/assets/img/favicon/favicon.ico" type="image/x-icon">
+<title>Press & Media — L8: The Butterfly Layer</title>
+<meta name="description" content="Media kit, biography, and approved assets for covering Jennifer Bowman and L8: The Butterfly Layer.">
 
-  <link rel="icon" type="image/png" sizes="96x96" href="/assets/img/favicon/favicon-96.png">
-  <link rel="icon" type="image/png" sizes="192x192" href="/assets/img/favicon/favicon-192.png">
-  <link rel="apple-touch-icon" sizes="180x180" href="/assets/img/favicon/favicon-180.png">
-  <link rel="icon" type="image/png" sizes="512x512" href="/assets/img/favicon/favicon-512.png">
+<!-- Open Graph -->
+<meta property="og:type" content="website">
+<meta property="og:title" content="Press & Media — L8: The Butterfly Layer">
+<meta property="og:description" content="Press and media resources for Jennifer Bowman and L8: The Butterfly Layer.">
+<meta property="og:image" content="/assets/img/social/og-default.png">
+<meta property="og:url" content="https://butterflylayer.com/press/">
+<meta property="og:site_name" content="L8: The Butterfly Layer">
 
-  <!-- Social / OpenGraph defaults -->
-  <meta property="og:title" content="The Butterfly Layer — L8">
-  <meta property="og:description" content="Where intent, architecture, and elegance shape networks of the future.">
-  <meta property="og:image" content="/assets/img/social/default-share.png">
-  <meta name="twitter:image" content="/assets/img/social/default-share.png">
-</head>
-<body id="top">
-  <div id="header"></div>
+<!-- Twitter -->
+<meta name="twitter:card" content="summary_large_image">
+<meta name="twitter:title" content="Press & Media — L8: The Butterfly Layer">
+<meta name="twitter:description" content="Press and media resources for Jennifer Bowman and L8: The Butterfly Layer.">
+<meta name="twitter:image" content="/assets/img/social/og-default.png">
 
-  <main id="main" role="main">
-    <header class="page-header container">
-      <h1>Press</h1>
-      <p class="page-intro">Mentions, features, and appearances.</p>
-    </header>
+<!-- Primary styles -->
+<link rel="stylesheet" href="/assets/css/variables.css?v=20251125232252">
+<link rel="stylesheet" href="/assets/css/main.css?v=20251125232252">
+<link rel="stylesheet" href="/assets/css/podcast.css?v=20251125232252">
 
-    <section class="container flow">
+<!-- Page-specific scripts (optional) -->
+
+
+<!-- Shared scripts -->
+<script src="/assets/js/quotes.js?v=20251125232252" defer></script>
+<script src="/assets/js/loader.js?v=20251125232252" defer></script>
+
+<!-- END: content/partials/head.html -->
+
+  </head>
+  <body id="top">
+    <div id="construction-banner-slot"></div>
+    <div id="header"></div>
+
+    <main id="main-content">
+      <!-- BEGIN: content/partials/page_header.html -->
+<header class="page-header">
+  <div class="container flow">
+    <h1>Press & Media</h1>
+    <p class="page-intro">Background, biography, key highlights, and media-ready assets for press and event organizers.</p>
+  </div>
+</header>
+<!-- END: content/partials/page_header.html -->
+ 
+          <section class="container flow">
       <ul class="press-list">
         <!-- Add press items as list entries; keep minimal structure -->
         <!-- Example:
@@ -44,11 +64,17 @@
         -->
       </ul>
     </section>
-  </main>
 
-  <div id="footer"></div>
+    </main>
 
-  <script src="/assets/js/quotes.js?v=20251124162559" defer></script>
-  <script src="/assets/js/loader.js?v=20251124162559" defer></script>
-</body>
+    <!-- Back to top / subtle footer helper -->
+    <section class="page-section backtotop">
+      <div class="container">
+        <a href="#construction-banner-slot">Back to Top</a>
+      </div>
+    </section>
+
+    <div id="footer"></div>
+  </body>
 </html>
+<!-- END: content/partials/layout.html -->
