--- a/pages/privacy/index.html
+++ b/pages/privacy/index.html
@@ -1,58 +1,88 @@
-<!-- /site/pages/privacy/index.html -->
-<!DOCTYPE html>
+<!-- BEGIN: content/partials/layout.html -->
+<!doctype html>
 <html lang="en">
-<head>
-  <meta charset="utf-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Privacy Policy — L8 The Butterfly Layer</title>
+  <head>
+    <!-- BEGIN: content/partials/head.html -->
+<meta charset="utf-8">
+<meta name="viewport" content="width=device-width, initial-scale=1">
 
-  <link rel="stylesheet" href="/assets/css/variables.css?v=20251124162559" />
-  <link rel="stylesheet" href="/assets/css/main.css?v=20251124162559" />
-  <!-- Favicon + Icons -->
-  <link rel="icon" href="/assets/img/favicon/favicon.ico" type="image/x-icon">
-  <link rel="shortcut icon" href="/assets/img/favicon/favicon.ico" type="image/x-icon">
+<title>Privacy Policy — L8: The Butterfly Layer</title>
+<meta name="description" content="How L8: The Butterfly Layer handles privacy, data use, and visitor trust.">
 
-  <link rel="icon" type="image/png" sizes="96x96" href="/assets/img/favicon/favicon-96.png">
-  <link rel="icon" type="image/png" sizes="192x192" href="/assets/img/favicon/favicon-192.png">
-  <link rel="apple-touch-icon" sizes="180x180" href="/assets/img/favicon/favicon-180.png">
-  <link rel="icon" type="image/png" sizes="512x512" href="/assets/img/favicon/favicon-512.png">
+<!-- Open Graph -->
+<meta property="og:type" content="website">
+<meta property="og:title" content="Privacy Policy — L8: The Butterfly Layer">
+<meta property="og:description" content="Read the privacy policy for L8: The Butterfly Layer.">
+<meta property="og:image" content="/assets/img/social/og-default.png">
+<meta property="og:url" content="https://butterflylayer.com/privacy/">
+<meta property="og:site_name" content="L8: The Butterfly Layer">
 
-  <!-- Social / OpenGraph defaults -->
-  <meta property="og:title" content="The Butterfly Layer — L8">
-  <meta property="og:description" content="Where intent, architecture, and elegance shape networks of the future.">
-  <meta property="og:image" content="/assets/img/social/default-share.png">
-  <meta name="twitter:image" content="/assets/img/social/default-share.png">
-</head>
-<body id="top">
-  <div id="header"></div>
+<!-- Twitter -->
+<meta name="twitter:card" content="summary_large_image">
+<meta name="twitter:title" content="Privacy Policy — L8: The Butterfly Layer">
+<meta name="twitter:description" content="Read the privacy policy for L8: The Butterfly Layer.">
+<meta name="twitter:image" content="/assets/img/social/og-default.png">
 
-  <main id="main" role="main">
-    <header class="page-header container">
-      <h1>Privacy Policy</h1>
-      <p class="page-intro">How we handle data with clarity and care.</p>
-    </header>
+<!-- Primary styles -->
+<link rel="stylesheet" href="/assets/css/variables.css?v=20251125232252">
+<link rel="stylesheet" href="/assets/css/main.css?v=20251125232252">
+<link rel="stylesheet" href="/assets/css/podcast.css?v=20251125232252">
 
-    <section class="container flow">
-      <h2>Overview</h2>
-      <p>This site collects minimal data necessary to provide content and improve the experience.</p>
+<!-- Page-specific scripts (optional) -->
 
-      <h2>What We Collect</h2>
-      <ul>
-        <li>Standard analytics (aggregate traffic insights)</li>
-        <li>Voluntary contact information (if you email us)</li>
-      </ul>
 
-      <h2>Use of Information</h2>
-      <p>We use information solely to respond to inquiries and improve the website.</p>
+<!-- Shared scripts -->
+<script src="/assets/js/quotes.js?v=20251125232252" defer></script>
+<script src="/assets/js/loader.js?v=20251125232252" defer></script>
 
-      <h2>Your Choices</h2>
-      <p>Contact us anytime at <a href="mailto:hello@butterflylayer.com">hello@butterflylayer.com</a> to request updates or removal.</p>
+<!-- END: content/partials/head.html -->
+
+  </head>
+  <body id="top">
+    <div id="construction-banner-slot"></div>
+    <div id="header"></div>
+
+    <main id="main-content">
+      <!-- BEGIN: content/partials/page_header.html -->
+<header class="page-header">
+  <div class="container flow">
+    <h1>Privacy Policy</h1>
+    <p class="page-intro">Details on how your data is handled, stored, and protected when you interact with L8: The Butterfly Layer.</p>
+  </div>
+</header>
+<!-- END: content/partials/page_header.html -->
+ 
+      <!-- BEGIN: /content/pages/privacy.html -->
+<section class="page-section">
+      <div class="container flow">
+        <h2>Overview</h2>
+        <p>This site collects minimal data necessary to provide content and improve the experience.</p>
+
+        <h2>What We Collect</h2>
+        <ul>
+          <li>Standard analytics (aggregate traffic insights)</li>
+          <li>Voluntary contact information (if you email us)</li>
+        </ul>
+
+        <h2>Use of Information</h2>
+        <p>We use information solely to respond to inquiries and improve the website.</p>
+
+        <h2>Your Choices</h2>
+        <p>Contact us anytime at <a href="mailto:hello@butterflylayer.com">hello@butterflylayer.com</a> to request updates or removal.</p>
+      </div>
     </section>
-  </main>
+<!-- END: /content/pages/privacy.html -->
 
-  <div id="footer"></div>
+    </main>
 
-  <script src="/assets/js/quotes.js?v=20251124162559" defer></script>
-  <script src="/assets/js/loader.js?v=20251124162559" defer></script>
-</body>
+    <!-- Back to top / subtle footer helper -->
+    <section class="page-section backtotop">
+      <div class="container">
+        <a href="#construction-banner-slot">Back to Top</a>
+      </div>
+    </section>
+
+    <div id="footer"></div>
+  </body>
 </html>
+<!-- END: content/partials/layout.html -->
