--- a/pages/publications/index.html
+++ b/pages/publications/index.html
@@ -1,123 +1,82 @@
-<!-- /site/pages/publications/index.html -->
-<!DOCTYPE html>
+<!-- BEGIN: content/partials/layout.html -->
+<!doctype html>
 <html lang="en">
-<head>
-  <meta charset="utf-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Publications — L8 The Butterfly Layer</title>
+  <head>
+    <!-- BEGIN: content/partials/head.html -->
+<meta charset="utf-8">
+<meta name="viewport" content="width=device-width, initial-scale=1">
 
-  <link rel="stylesheet" href="/assets/css/variables.css?v=20251124162559" />
-  <link rel="stylesheet" href="/assets/css/main.css?v=20251124162559" />
-  <!-- Favicon + Icons -->
-  <link rel="icon" href="/assets/img/favicon/favicon.ico" type="image/x-icon">
-  <link rel="shortcut icon" href="/assets/img/favicon/favicon.ico" type="image/x-icon">
+<title>Publications — Jennifer Bowman | L8: The Butterfly Layer</title>
+<meta name="description" content="Books, articles, and long-form work from Jennifer Bowman — blending architecture, AI, and human-centered design.">
 
-  <link rel="icon" type="image/png" sizes="96x96" href="/assets/img/favicon/favicon-96.png">
-  <link rel="icon" type="image/png" sizes="192x192" href="/assets/img/favicon/favicon-192.png">
-  <link rel="apple-touch-icon" sizes="180x180" href="/assets/img/favicon/favicon-180.png">
-  <link rel="icon" type="image/png" sizes="512x512" href="/assets/img/favicon/favicon-512.png">
+<!-- Open Graph -->
+<meta property="og:type" content="website">
+<meta property="og:title" content="Publications — L8: The Butterfly Layer">
+<meta property="og:description" content="Explore publications by Jennifer Bowman on architecture, AI, and intent-driven design.">
+<meta property="og:image" content="/assets/img/social/og-default.png">
+<meta property="og:url" content="https://butterflylayer.com/publications/">
+<meta property="og:site_name" content="L8: The Butterfly Layer">
 
-  <!-- Social / OpenGraph defaults -->
-  <meta property="og:title" content="The Butterfly Layer — L8">
-  <meta property="og:description" content="Where intent, architecture, and elegance shape networks of the future.">
-  <meta property="og:image" content="/assets/img/social/default-share.png">
-  <meta name="twitter:image" content="/assets/img/social/default-share.png">
-</head>
-<body id="top">
-  <div id="header"></div>
+<!-- Twitter -->
+<meta name="twitter:card" content="summary_large_image">
+<meta name="twitter:title" content="Publications — L8: The Butterfly Layer">
+<meta name="twitter:description" content="Explore publications by Jennifer Bowman on architecture, AI, and intent-driven design.">
+<meta name="twitter:image" content="/assets/img/social/og-default.png">
 
-  <main id="main" class="site-main container">
-    <header class="page-header">
-      <h1>Publications</h1>
-      <p class="page-lead">
-        Formal work published under my name — books, video series, and selected articles.
-        These projects shape how I think about L8 and real-world network design.
-      </p>
-    </header>
+<!-- Primary styles -->
+<link rel="stylesheet" href="/assets/css/variables.css?v=20251125232252">
+<link rel="stylesheet" href="/assets/css/main.css?v=20251125232252">
+<link rel="stylesheet" href="/assets/css/podcast.css?v=20251125232252">
 
-    <section aria-labelledby="book">
-      <h2 id="book">Books</h2>
+<!-- Page-specific scripts (optional) -->
 
-      <article class="pub-item book">
-        <div class="pub-media">
-          <img
-            src="/assets/img/publications/book-multidomain-networks-cover.jpg?v=20251124162559"
-            alt="Cover of the Cisco Press book 'Designing Real-World Multi-Domain Networks' by Dhru Mil Prajapati, Jennifer Bowman, and Navin Suvarna"
-            class="book-cover"
-          />
-        </div>
 
-        <div class="pub-content">
-          <h3>Designing Real-World Multi-Domain Networks</h3>
-          <p class="pub-meta">Cisco Press &mdash; 2024</p>
-          <p>
-            A practical guide to designing intent-driven architectures that span multiple
-            domains, teams, and technologies. Grounded in real enterprise complexity, not
-            lab diagrams.
-          </p>
+<!-- Shared scripts -->
+<script src="/assets/js/quotes.js?v=20251125232252" defer></script>
+<script src="/assets/js/loader.js?v=20251125232252" defer></script>
 
-          <p>
-            <a href="https://www.ciscopress.com/store/designing-real-world-multi-domain-networks-9780138037215" target="_blank" rel="noopener">
-              View on Cisco Press (external)
-            </a>
-          </p>
-        </div>
-      </article>
-    </section>
+<!-- END: content/partials/head.html -->
 
-    <section aria-labelledby="video-series">
-      <h2 id="video-series">Video Series</h2>
+  </head>
+  <body id="top">
+    <div id="construction-banner-slot"></div>
+    <div id="header"></div>
 
-      <article class="pub-item">
-        <h3>AI-Driven Multidomain Networks</h3>
-        <p class="pub-meta">
-          Video series &mdash; coming soon
-        </p>
-        <p>
-          A series on how AI and automation change the way we approach multi-domain
-          networking. For now, this is a placeholder until formal release details
-          are confirmed and sharable.
-        </p>
-        <p>
-          <em>More details will be added here once I’m able to share them publicly.</em>
-        </p>
-      </article>
-    </section>
+    <main id="main-content">
+      <!-- BEGIN: content/partials/page_header.html -->
+<header class="page-header">
+  <div class="container flow">
+    <h1>Publications</h1>
+    <p class="page-intro">Selected books, articles, and long-form pieces that explore architecture, AI, and the human intent layer.</p>
+  </div>
+</header>
+<!-- END: content/partials/page_header.html -->
+ 
+          <section class="page-section" aria-labelledby="book">
+      <div class="container flow">
+        <h2 id="book">Books</h2>
 
-    <section aria-labelledby="articles" class="hidden">
-      <h2 id="articles">Articles &amp; White Papers</h2>
-      <p>
-        Selected pieces that connect L8 thinking with specific technologies, architectures,
-        or industry trends.
-      </p>
-
-      <div class="pub-list">
-        <article class="pub-item card">
-          <div class="pub-content">
-            <h3>Title of Article or White Paper #1</h3>
-            <p class="pub-meta">Cisco / Technical Blog &mdash; 2025</p>
-            <p>
-              One-sentence positioning for this piece. What problem does it speak to,
-              and who is it for?
-            </p>
-            <p>
-              <a href="https://example.com/article-1" target="_blank" rel="noopener">
-                Read the article &rarr;
-              </a>
-            </p>
+        <article class="pub-item book">
+          <div class="pub-media">
+            <img
+              src="/assets/img/publications/book-multidomain-networks-cover.jpg?v=20251125232252"
+              alt="Cover of the Cisco Press book 'Designing Real-World Multi-Domain Networks' by Dhru Mil Prajapati, Jennifer Bowman, and Navin Suvarna"
+              class="book-cover"
+            />
           </div>
-        </article>
 
-        <article class="pub-item card">
           <div class="pub-content">
-            <h3>Title of Article or White Paper #2</h3>
-            <p class="pub-meta">Industry Publication &mdash; 2024</p>
+            <h3>Designing Real-World Multi-Domain Networks</h3>
+            <p class="pub-meta">Cisco Press &mdash; 2024</p>
             <p>
-              Another short summary; keep it under two lines so the list stays scannable.
+              A practical guide to designing intent-driven architectures that span multiple
+              domains, teams, and technologies. Grounded in real enterprise complexity, not
+              lab diagrams.
             </p>
+
             <p>
-              <a href="https://example.com/article-2" target="_blank" rel="noopener">
-                Read the article &rarr;
+              <a href="https://www.ciscopress.com/store/designing-real-world-multi-domain-networks-9780138037215" target="_blank" rel="noopener">
+                View on Cisco Press (external)
               </a>
             </p>
           </div>
@@ -125,19 +84,91 @@
       </div>
     </section>
 
-    <section aria-labelledby="how-pubs-connect">
-      <h2 id="how-pubs-connect">How These Publications Connect to L8</h2>
-      <p>
-        If the L8 site feels like the living, breathing part of my work, these publications
-        are the “snapshots in time” that capture what I knew and believed at a given
-        moment. The blog, podcast, and toolkit continue the story between editions.
-      </p>
+    <section class="page-section" aria-labelledby="video-series">
+      <div class="container flow">
+        <h2 id="video-series">Video Series</h2>
+
+        <article class="pub-item">
+          <h3>AI-Driven Multidomain Networks</h3>
+          <p class="pub-meta">
+            Video series &mdash; coming soon
+          </p>
+          <p>
+            A series on how AI and automation change the way we approach multi-domain
+            networking. For now, this is a placeholder until formal release details
+            are confirmed and sharable.
+          </p>
+          <p>
+            <em>More details will be added here once I’m able to share them publicly.</em>
+          </p>
+        </article>
+      </div>
     </section>
-  </main>
 
-  <div id="footer"></div>
+    <section class="page-section hidden" aria-labelledby="articles">
+      <div class="container flow">
+        <h2 id="articles">Articles &amp; White Papers</h2>
+        <p>
+          Selected pieces that connect L8 thinking with specific technologies, architectures,
+          or industry trends.
+        </p>
 
-  <script src="/assets/js/quotes.js?v=20251124162559" defer></script>
-  <script src="/assets/js/loader.js?v=20251124162559" defer></script>
-</body>
+        <div class="pub-list">
+          <article class="pub-item card">
+            <div class="pub-content">
+              <h3>Title of Article or White Paper #1</h3>
+              <p class="pub-meta">Cisco / Technical Blog &mdash; 2025</p>
+              <p>
+                One-sentence positioning for this piece. What problem does it speak to,
+                and who is it for?
+              </p>
+              <p>
+                <a href="https://example.com/article-1" target="_blank" rel="noopener">
+                  Read the article &rarr;
+                </a>
+              </p>
+            </div>
+          </article>
+
+          <article class="pub-item card">
+            <div class="pub-content">
+              <h3>Title of Article or White Paper #2</h3>
+              <p class="pub-meta">Industry Publication &mdash; 2024</p>
+              <p>
+                Another short summary; keep it under two lines so the list stays scannable.
+              </p>
+              <p>
+                <a href="https://example.com/article-2" target="_blank" rel="noopener">
+                  Read the article &rarr;
+                </a>
+              </p>
+            </div>
+          </article>
+        </div>
+      </div>
+    </section>
+
+    <section class="page-section" aria-labelledby="how-pubs-connect">
+      <div class="container flow">
+        <h2 id="how-pubs-connect">How These Publications Connect to L8</h2>
+        <p>
+          If the L8 site feels like the living, breathing part of my work, these publications
+          are the “snapshots in time” that capture what I knew and believed at a given
+          moment. The blog, podcast, and toolkit continue the story between editions.
+        </p>
+      </div>
+    </section>
+
+    </main>
+
+    <!-- Back to top / subtle footer helper -->
+    <section class="page-section backtotop">
+      <div class="container">
+        <a href="#construction-banner-slot">Back to Top</a>
+      </div>
+    </section>
+
+    <div id="footer"></div>
+  </body>
 </html>
+<!-- END: content/partials/layout.html -->
