--- a/pages/resources/index.html
+++ b/pages/resources/index.html
@@ -1,122 +1,141 @@
-<!-- /site/pages/resources/index.html -->
-<!DOCTYPE html>
+<!-- BEGIN: content/partials/layout.html -->
+<!doctype html>
 <html lang="en">
-<head>
-  <meta charset="utf-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Resources — L8 The Butterfly Layer</title>
+  <head>
+    <!-- BEGIN: content/partials/head.html -->
+<meta charset="utf-8">
+<meta name="viewport" content="width=device-width, initial-scale=1">
 
-  <link rel="stylesheet" href="/assets/css/variables.css?v=20251124162559" />
-  <link rel="stylesheet" href="/assets/css/main.css?v=20251124162559" />
-  <!-- Favicon + Icons -->
-  <link rel="icon" href="/assets/img/favicon/favicon.ico" type="image/x-icon">
-  <link rel="shortcut icon" href="/assets/img/favicon/favicon.ico" type="image/x-icon">
+<title>Resources — L8: Guidance, Insights, and Tools</title>
+<meta name="description" content="Curated materials that support growth, learning, leadership, and well-being — all through the L8 lens of intent-driven design.">
 
-  <link rel="icon" type="image/png" sizes="96x96" href="/assets/img/favicon/favicon-96.png">
-  <link rel="icon" type="image/png" sizes="192x192" href="/assets/img/favicon/favicon-192.png">
-  <link rel="apple-touch-icon" sizes="180x180" href="/assets/img/favicon/favicon-180.png">
-  <link rel="icon" type="image/png" sizes="512x512" href="/assets/img/favicon/favicon-512.png">
+<!-- Open Graph -->
+<meta property="og:type" content="website">
+<meta property="og:title" content="L8 Resources — Curated Guidance and Tools">
+<meta property="og:description" content="Explore leadership insights, well-being support, and practical tools inspired by the L8 philosophy.">
+<meta property="og:image" content="/assets/img/social/og-default.png">
+<meta property="og:url" content="https://butterflylayer.com/resources/">
+<meta property="og:site_name" content="L8: The Butterfly Layer">
 
-  <!-- Open Graph / Facebook -->
-  <meta property="og:type" content="website">
-  <meta property="og:title" content="L8: The Butterfly Layer">
-  <meta property="og:description" content="Architecture, AI, and the Human Intent Layer — created by Jennifer Bowman.">
-  <meta property="og:image" content="/assets/img/social/og-default.png">
-  <meta property="og:image:width" content="1200">
-  <meta property="og:image:height" content="630">
-  <meta property="og:url" content="https://butterflylayer.com/">
-  <meta property="og:site_name" content="L8: The Butterfly Layer">
+<!-- Twitter -->
+<meta name="twitter:card" content="summary_large_image">
+<meta name="twitter:title" content="L8 Resources — Curated Guidance and Tools">
+<meta name="twitter:description" content="Explore leadership insights, well-being support, and practical tools inspired by the L8 philosophy.">
+<meta name="twitter:image" content="/assets/img/social/og-default.png">
 
-  <!-- Twitter -->
-  <meta name="twitter:card" content="summary_large_image">
-  <meta name="twitter:title" content="L8: The Butterfly Layer">
-  <meta name="twitter:description" content="Architecture, AI, and the Human Intent Layer.">
-  <meta name="twitter:image" content="/assets/img/social/og-default.png">
+<!-- Primary styles -->
+<link rel="stylesheet" href="/assets/css/variables.css?v=20251125232252">
+<link rel="stylesheet" href="/assets/css/main.css?v=20251125232252">
+<link rel="stylesheet" href="/assets/css/podcast.css?v=20251125232252">
 
-  <!-- Primary Meta -->
-  <meta name="title" content="L8: The Butterfly Layer">
-  <meta name="description" content="Exploring architecture, AI, and the human intent layer — by Jennifer Bowman.">
-</head>
-<body id="top">
-  <div id="header"></div>
+<!-- Page-specific scripts (optional) -->
 
-  <main id="main" class="site-main container">
-    <header class="page-header">
-      <h1>Resources</h1>
-      <p class="page-lead">
-        Support for the humans doing this work: women in engineering, mentoring, and
-        health &amp; resilience. This is the part of L8 that lives at the human layer.
-      </p>
-    </header>
 
-    <section aria-labelledby="women-in-eng">
-      <h2 id="women-in-eng">Women in Engineering</h2>
-      <p>
-        Systems are complex. Careers can be even more so. This space is for women in
-        engineering and those who support them — navigating impact, visibility, and
-        sustainability in technical roles.
-      </p>
-      <p>
-        I’ll be sharing stories, frameworks, and practical tools for staying both technical
-        and human over the long haul.
-      </p>
-      <p>
-        <a href="/pages/resources/women-in-engineering/">
-          Explore Women in Engineering &rarr;
-        </a>
-      </p>
+<!-- Shared scripts -->
+<script src="/assets/js/quotes.js?v=20251125232252" defer></script>
+<script src="/assets/js/loader.js?v=20251125232252" defer></script>
+
+<!-- END: content/partials/head.html -->
+
+  </head>
+  <body id="top">
+    <div id="construction-banner-slot"></div>
+    <div id="header"></div>
+
+    <main id="main-content">
+      <!-- BEGIN: content/partials/page_header.html -->
+<header class="page-header">
+  <div class="container flow">
+    <h1>Resources</h1>
+    <p class="page-intro">A curated collection of guidance, tools, and reflections — from leadership to well-being, designed to support your growth.</p>
+  </div>
+</header>
+<!-- END: content/partials/page_header.html -->
+ 
+      <!-- BEGIN: /content/resources.html -->
+    <section class="page-section" aria-labelledby="women-in-eng">
+      <div class="container flow">
+        <h2 id="women-in-eng">♀️ Women in Engineering</h2>
+        <p>
+          Systems are complex. Careers can be even more so. This space is for women in
+          engineering and those who support them — navigating impact, visibility, and
+          sustainability in technical roles.
+        </p>
+        <p>
+          I’ll be sharing stories, frameworks, and practical tools for staying both technical
+          and human over the long haul.
+        </p>
+        <p>
+          <a href="/pages/resources/women-in-engineering/">
+            Explore Women in Engineering &rarr;
+          </a>
+        </p>
+      </div>
     </section>
 
-    <section aria-labelledby="mentoring">
-      <h2 id="mentoring">Mentoring</h2>
-      <p>
-        Mentoring isn’t about having all the answers. It’s about sitting beside someone
-        while they untangle their own complexity. My approach blends architecture thinking,
-        narrative, and practical next steps.
-      </p>
-      <ul>
-        <li>How I think about mentoring technical leaders</li>
-        <li>Questions I ask more than I answer</li>
-        <li>What you can expect from working with me</li>
-      </ul>
-      <p>
-        <a href="/pages/resources/mentoring/">
-          Learn more about Mentoring &rarr;
-        </a>
-      </p>
+    <section class="page-section" aria-labelledby="mentoring">
+      <div class="container flow">
+        <h2 id="mentoring">🤝 Mentoring</h2>
+        <p>
+          Mentoring isn’t about having all the answers. It’s about sitting beside someone
+          while they untangle their own complexity. My approach blends architecture thinking,
+          narrative, and practical next steps.
+        </p>
+        <ul>
+          <li>How I think about mentoring technical leaders</li>
+          <li>Questions I ask more than I answer</li>
+          <li>What you can expect from working with me</li>
+        </ul>
+        <p>
+          <a href="/pages/resources/mentoring/">
+            Learn more about Mentoring &rarr;
+          </a>
+        </p>
+      </div>
     </section>
 
-    <section aria-labelledby="health-resilience">
-      <h2 id="health-resilience">Health &amp; Resilience</h2>
-      <p>
-        I had a stroke. It reshaped how I think about time, impact, and what “high
-        performance” really means. This isn’t medical advice — it’s one person’s story and
-        some hard-earned perspective.
-      </p>
-      <p>
-        I’ll also point to official resources that can literally save lives when every
-        minute matters.
-      </p>
-      <p>
-        <a href="/pages/resources/health-resilience/">
-          Read about Health and Resilience &rarr;
-        </a>
-      </p>
+    <section class="page-section" aria-labelledby="health-resilience">
+      <div class="container flow">
+        <h2 id="health-resilience">❤️‍🩹 Health &amp; Resilience</h2>
+        <p>
+          I had a stroke. It reshaped how I think about time, impact, and what “high
+          performance” really means. This isn’t medical advice — it’s one person’s story and
+          some hard-earned perspective.
+        </p>
+        <p>
+          I’ll also point to official resources that can literally save lives when every
+          minute matters.
+        </p>
+        <p>
+          <a href="/pages/resources/health-resilience/">
+            Read about Health and Resilience &rarr;
+          </a>
+        </p>
+      </div>
     </section>
 
-    <section aria-labelledby="connecting-dots">
-      <h2 id="connecting-dots">Connecting the Dots</h2>
-      <p>
-        These themes show up across the site — in the blog, podcast, and toolkit. As new
-        posts and episodes go live, I’ll link to them from here so you can move easily
-        between the “human layer” and the technical work.
-      </p>
+    <section class="page-section" aria-labelledby="connecting-dots">
+      <div class="container flow">
+        <h2 id="connecting-dots">Connecting the Dots</h2>
+        <p>
+          These themes show up across the site — in the blog, podcast, and toolkit. As new
+          posts and episodes go live, I’ll link to them from here so you can move easily
+          between the “human layer” and the technical work.
+        </p>
+      </div>
     </section>
-  </main>
+<!-- END: /content/resources.html -->
 
-  <div id="footer"></div>
+    </main>
 
-  <script src="/assets/js/quotes.js?v=20251124162559" defer></script>
-  <script src="/assets/js/loader.js?v=20251124162559" defer></script>
-</body>
+    <!-- Back to top / subtle footer helper -->
+    <section class="page-section backtotop">
+      <div class="container">
+        <a href="#construction-banner-slot">Back to Top</a>
+      </div>
+    </section>
+
+    <div id="footer"></div>
+  </body>
 </html>
+<!-- END: content/partials/layout.html -->
