--- a/pages/toolkit/index.html
+++ b/pages/toolkit/index.html
@@ -1,112 +1,148 @@
-<!-- /site/pages/toolkit/index.html -->
-<!DOCTYPE html>
+<!-- BEGIN: content/partials/layout.html -->
+<!doctype html>
 <html lang="en">
-<head>
-  <meta charset="utf-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Toolkit — L8 The Butterfly Layer</title>
+  <head>
+    <!-- BEGIN: content/partials/head.html -->
+<meta charset="utf-8">
+<meta name="viewport" content="width=device-width, initial-scale=1">
 
-  <link rel="stylesheet" href="/assets/css/variables.css?v=20251124162559" />
-  <link rel="stylesheet" href="/assets/css/main.css?v=20251124162559" />
-  <!-- Favicon + Icons -->
-  <link rel="icon" href="/assets/img/favicon/favicon.ico" type="image/x-icon">
-  <link rel="shortcut icon" href="/assets/img/favicon/favicon.ico" type="image/x-icon">
+<title>Toolkit — Architecture & L8 Resources</title>
+<meta name="description" content="Hands-on tools, guides, and worksheets designed for clarity, composure, and elegant problem-solving.">
 
-  <link rel="icon" type="image/png" sizes="96x96" href="/assets/img/favicon/favicon-96.png">
-  <link rel="icon" type="image/png" sizes="192x192" href="/assets/img/favicon/favicon-192.png">
-  <link rel="apple-touch-icon" sizes="180x180" href="/assets/img/favicon/favicon-180.png">
-  <link rel="icon" type="image/png" sizes="512x512" href="/assets/img/favicon/favicon-512.png">
+<!-- Open Graph -->
+<meta property="og:type" content="website">
+<meta property="og:title" content="Toolkit — L8: The Butterfly Layer">
+<meta property="og:description" content="Access architecture and L8 toolkit resources from Jennifer Bowman.">
+<meta property="og:image" content="/assets/img/social/og-default.png">
+<meta property="og:url" content="https://butterflylayer.com/toolkit/">
+<meta property="og:site_name" content="L8: The Butterfly Layer">
 
-  <!-- Social / OpenGraph defaults -->
-  <meta property="og:title" content="The Butterfly Layer — L8">
-  <meta property="og:description" content="Where intent, architecture, and elegance shape networks of the future.">
-  <meta property="og:image" content="/assets/img/social/default-share.png">
-  <meta name="twitter:image" content="/assets/img/social/default-share.png">
-</head>
-<body id="top">
-  <div id="header"></div>
+<!-- Twitter -->
+<meta name="twitter:card" content="summary_large_image">
+<meta name="twitter:title" content="Toolkit — L8: The Butterfly Layer">
+<meta name="twitter:description" content="Access architecture and L8 toolkit resources from Jennifer Bowman.">
+<meta name="twitter:image" content="/assets/img/social/og-default.png">
 
-    <main id="main" class="site-main container">
-    <header class="page-header">
-        <h1>Toolkit</h1>
-        <p class="page-lead">
-        Practical tools, guides, and references to help you calm complexity in real networks.
-        Use these in your own architecture work, workshops, and design sessions.
-        </p>
-    </header>
+<!-- Primary styles -->
+<link rel="stylesheet" href="/assets/css/variables.css?v=20251125232252">
+<link rel="stylesheet" href="/assets/css/main.css?v=20251125232252">
+<link rel="stylesheet" href="/assets/css/podcast.css?v=20251125232252">
 
-    <section aria-labelledby="l8-toolkit">
-        <h2 id="l8-toolkit">L8 Toolkit</h2>
-        <p>
-        The L8 Toolkit is a growing collection of diagrams, worksheets, and prompts built
-        around the “Butterfly Layer” mental model. It’s designed to help you shift from
-        box-by-box thinking to intent-led, multi-domain design.
-        </p>
-        <ul>
-        <li>L8 overview one-pager (coming soon)</li>
-        <li>Intent mapping worksheet (coming soon)</li>
-        <li>Architecture butterfly canvas (coming soon)</li>
-        </ul>
+<!-- Page-specific scripts (optional) -->
+
+
+<!-- Shared scripts -->
+<script src="/assets/js/quotes.js?v=20251125232252" defer></script>
+<script src="/assets/js/loader.js?v=20251125232252" defer></script>
+
+<!-- END: content/partials/head.html -->
+
+  </head>
+  <body id="top">
+    <div id="construction-banner-slot"></div>
+    <div id="header"></div>
+
+    <main id="main-content">
+      <!-- BEGIN: content/partials/page_header.html -->
+<header class="page-header">
+  <div class="container flow">
+    <h1>Toolkit</h1>
+    <p class="page-intro">Downloadable tools, checklists, and guides to put L8 concepts into practice in your own architectures.</p>
+  </div>
+</header>
+<!-- END: content/partials/page_header.html -->
+ 
+      <!-- BEGIN: /content/pages/toolkit.html -->
+    <section class="page-section" aria-labelledby="l8-toolkit">
+        <div class="container flow">
+            <h2 id="l8-toolkit">L8 Toolkit</h2>
+            <p>
+            The L8 Toolkit is a growing collection of diagrams, worksheets, and prompts built
+            around the “Butterfly Layer” mental model. It’s designed to help you shift from
+            box-by-box thinking to intent-led, multi-domain design.
+            </p>
+            <ul>
+            <li>L8 overview one-pager (coming soon)</li>
+            <li>Intent mapping worksheet (coming soon)</li>
+            <li>Architecture butterfly canvas (coming soon)</li>
+            </ul>
+        </div>
     </section>
 
-    <section aria-labelledby="architecture-guides">
-        <h2 id="architecture-guides">Architecture Guides &amp; Reference</h2>
-        <p>
-        Reference material you can keep open while you’re designing or reviewing real-world
-        networks.
-        </p>
-        <ul>
-            <li>Coming soon! Under development.</li>
-        </ul>
+    <section class="page-section" aria-labelledby="architecture-guides">
+        <div class="container flow">
+            <h2 id="architecture-guides">Architecture Guides &amp; Reference</h2>
+            <p>
+            Reference material you can keep open while you’re designing or reviewing real-world
+            networks.
+            </p>
+            <ul>
+                <li>Coming soon! Under development.</li>
+            </ul>
+        </div>
     </section>
 
-    <section aria-labelledby="worksheets">
-        <h2 id="worksheets">Worksheets &amp; Checklists</h2>
-        <p>
-        Printable or digital sheets you can use during workshops, mentoring sessions, or
-        solo design work.
-        </p>
-        <ul>
-        <li>Discovery questions for intent-led design (coming soon)</li>
-        <li>Stakeholder mapping worksheet (coming soon)</li>
-        <li>“From symptoms to signals” checklist (coming soon)</li>
-        </ul>
+    <section class="page-section" aria-labelledby="worksheets">
+        <div class="container flow">
+            <h2 id="worksheets">Worksheets &amp; Checklists</h2>
+            <p>
+            Printable or digital sheets you can use during workshops, mentoring sessions, or
+            solo design work.
+            </p>
+            <ul>
+            <li>Discovery questions for intent-led design (coming soon)</li>
+            <li>Stakeholder mapping worksheet (coming soon)</li>
+            <li>“From symptoms to signals” checklist (coming soon)</li>
+            </ul>
+        </div>
     </section>
 
-    <section aria-labelledby="industry-links">
-        <h2 id="industry-links">Cisco &amp; Industry Links</h2>
-        <p>
-        Curated links that align with the way L8 approaches real-world architecture.
-        These are external resources; the goal is to help you get to the right places faster.
-        </p>
-        <ul>
-        <li>
-            <a href="https://www.cisco.com" target="_blank" rel="noopener">
-            Cisco official documentation (external)
-            </a>
-        </li>
-        <li>
-            <a href="https://developer.cisco.com" target="_blank" rel="noopener">
-            Cisco DevNet (external)
-            </a>
-        </li>
-        <!-- Replace/add links that match your existing resource list -->
-        </ul>
+    <section class="page-section" aria-labelledby="industry-links">
+        <div class="container flow">
+            <h2 id="industry-links">Cisco &amp; Industry Links</h2>
+            <p>
+            Curated links that align with the way L8 approaches real-world architecture.
+            These are external resources; the goal is to help you get to the right places faster.
+            </p>
+            <ul>
+            <li>
+                <a href="https://www.cisco.com" target="_blank" rel="noopener">
+                Cisco official documentation (external)
+                </a>
+            </li>
+            <li>
+                <a href="https://developer.cisco.com" target="_blank" rel="noopener">
+                Cisco DevNet (external)
+                </a>
+            </li>
+            <!-- Replace/add links that match your existing resource list -->
+            </ul>
+        </div>
     </section>
 
-    <section aria-labelledby="how-to-use">
-        <h2 id="how-to-use">How to Use this Toolkit</h2>
-        <p>
-        Start with the guides, then layer in worksheets for specific projects. You don’t
-        have to use everything at once. Pick the pieces that lighten the load for you and
-        your teams, and ignore the rest.
-        </p>
+    <section class="page-section" aria-labelledby="how-to-use">
+        <div class="container flow">
+            <h2 id="how-to-use">How to Use this Toolkit</h2>
+            <p>
+            Start with the guides, then layer in worksheets for specific projects. You don’t
+            have to use everything at once. Pick the pieces that lighten the load for you and
+            your teams, and ignore the rest.
+            </p>
+        </div>
     </section>
+
+<!-- END: /content/pages/toolkit.html -->
+
     </main>
 
-  <div id="footer"></div>
+    <!-- Back to top / subtle footer helper -->
+    <section class="page-section backtotop">
+      <div class="container">
+        <a href="#construction-banner-slot">Back to Top</a>
+      </div>
+    </section>
 
-  <script src="/assets/js/quotes.js?v=20251124162559" defer></script>
-  <script src="/assets/js/loader.js?v=20251124162559" defer></script>
-</body>
+    <div id="footer"></div>
+  </body>
 </html>
+<!-- END: content/partials/layout.html -->
