--- a/pages/about/index.html
+++ b/pages/about/index.html
@@ -1,51 +1,65 @@
-<!-- /site/pages/about/index.html -->
-<!DOCTYPE html>
+<!-- BEGIN: content/partials/layout.html -->
+<!doctype html>
 <html lang="en">
-<head>
-  <meta charset="utf-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>About — The Butterfly Layer</title>
-  <meta name="description" content="L8 — The Butterfly Layer. Jennifer Bowman helps global enterprises architect networks of the future at the human layer.">
-  <link rel="stylesheet" href="/assets/css/variables.css?v=20251124162559" />
-  <link rel="stylesheet" href="/assets/css/main.css?v=20251124162559" />
-  <!-- Favicon + Icons -->
-  <link rel="icon" href="/assets/img/favicon/favicon.ico" type="image/x-icon">
-  <link rel="shortcut icon" href="/assets/img/favicon/favicon.ico" type="image/x-icon">
+  <head>
+    <!-- BEGIN: content/partials/head.html -->
+<meta charset="utf-8">
+<meta name="viewport" content="width=device-width, initial-scale=1">
 
-  <link rel="icon" type="image/png" sizes="96x96" href="/assets/img/favicon/favicon-96.png">
-  <link rel="icon" type="image/png" sizes="192x192" href="/assets/img/favicon/favicon-192.png">
-  <link rel="apple-touch-icon" sizes="180x180" href="/assets/img/favicon/favicon-180.png">
-  <link rel="icon" type="image/png" sizes="512x512" href="/assets/img/favicon/favicon-512.png">
+<title>About Jennifer Bowman — L8: The Butterfly Layer</title>
+<meta name="description" content="Architect, author, and creator of L8: The Butterfly Layer.">
 
-  <!-- Social / OpenGraph defaults -->
-  <meta property="og:title" content="The Butterfly Layer — L8">
-  <meta property="og:description" content="Where intent, architecture, and elegance shape networks of the future.">
-  <meta property="og:image" content="/assets/img/social/default-share.png">
-  <meta name="twitter:image" content="/assets/img/social/default-share.png">
-</head>
-<body id="top">
-  <div id="header"></div>
+<!-- Open Graph -->
+<meta property="og:type" content="website">
+<meta property="og:title" content="About Jennifer Bowman">
+<meta property="og:description" content="Meet the architect behind L8: The Butterfly Layer.">
+<meta property="og:image" content="/assets/img/social/og-default.png">
+<meta property="og:url" content="https://butterflylayer.com/about/">
+<meta property="og:site_name" content="L8: The Butterfly Layer">
 
-  <main id="main" role="main">
-    <!-- Page header -->
-    <header class="page-header">
-      <div class="container flow">
-        <p class="kicker">About</p>
-        <h1>About Jennifer Bowman</h1>
-        <p class="page-intro">
-          L8 is the human layer above the stack — where intent, clarity, and elegance
-          shape the network.
-        </p>
-      </div>
-    </header>
+<!-- Twitter -->
+<meta name="twitter:card" content="summary_large_image">
+<meta name="twitter:title" content="About Jennifer Bowman">
+<meta name="twitter:description" content="Meet the architect behind L8: The Butterfly Layer.">
+<meta name="twitter:image" content="/assets/img/social/og-default.png">
 
+<!-- Primary styles -->
+<link rel="stylesheet" href="/assets/css/variables.css?v=20251125232252">
+<link rel="stylesheet" href="/assets/css/main.css?v=20251125232252">
+<link rel="stylesheet" href="/assets/css/podcast.css?v=20251125232252">
+
+<!-- Page-specific scripts (optional) -->
+
+
+<!-- Shared scripts -->
+<script src="/assets/js/quotes.js?v=20251125232252" defer></script>
+<script src="/assets/js/loader.js?v=20251125232252" defer></script>
+
+<!-- END: content/partials/head.html -->
+
+  </head>
+  <body id="top">
+    <div id="construction-banner-slot"></div>
+    <div id="header"></div>
+
+    <main id="main-content">
+      <!-- BEGIN: content/partials/page_header.html -->
+<header class="page-header">
+  <div class="container flow">
+    <h1>About Jennifer Bowman</h1>
+    <p class="page-intro">L8 is the human layer above the stack — where intent, clarity, and elegance shape the network.</p>
+  </div>
+</header>
+<!-- END: content/partials/page_header.html -->
+ 
+      <!-- BEGIN: /content/pages/about.html -->
     <!-- Main bio section -->
     <section class="page-section">
       <div class="container">
         <div class="bio-block">
           <figure class="profile-photo">
             <img
-              src="/assets/img/headshot-jennifer.jpg?v=20251124162559"
+              src="/assets/img/headshot-jennifer.jpg?v=20251125232252"
               alt="Jennifer Bowman, Principal Architect at Cisco CX"
             />
           </figure>
@@ -101,11 +115,18 @@
         </blockquote>
       </aside>
     </section>
-  </main>
+<!-- END: /content/pages/about.html -->
 
-  <div id="footer"></div>
+    </main>
 
-  <script src="/assets/js/loader.js?v=20251124162559" defer></script>
-  <script src="/assets/js/quotes.js?v=20251124162559" defer></script>
-</body>
+    <!-- Back to top / subtle footer helper -->
+    <section class="page-section backtotop">
+      <div class="container">
+        <a href="#construction-banner-slot">Back to Top</a>
+      </div>
+    </section>
+
+    <div id="footer"></div>
+  </body>
 </html>
+<!-- END: content/partials/layout.html -->
