--- a/pages/resources/mentoring/index.html
+++ b/pages/resources/mentoring/index.html
@@ -1,43 +1,74 @@
-<!-- /site/pages/resources/index.html -->
-<!DOCTYPE html>
+<!-- BEGIN: content/partials/layout.html -->
+<!doctype html>
 <html lang="en">
-<head>
-  <meta charset="utf-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Mentoring — L8 The Butterfly Layer</title>
+  <head>
+    <!-- BEGIN: content/partials/head.html -->
+<meta charset="utf-8">
+<meta name="viewport" content="width=device-width, initial-scale=1">
 
-  <link rel="stylesheet" href="/assets/css/variables.css?v=20251124162559" />
-  <link rel="stylesheet" href="/assets/css/main.css?v=20251124162559" />
-  <!-- Favicon + Icons -->
-  <link rel="icon" href="/assets/img/favicon/favicon.ico" type="image/x-icon">
-  <link rel="shortcut icon" href="/assets/img/favicon/favicon.ico" type="image/x-icon">
+<title>Mentoring — Resources | L8: The Butterfly Layer</title>
+<meta name="description" content="Mentoring philosophies, leadership practices, and frameworks for supporting others with clarity and care.">
 
-  <link rel="icon" type="image/png" sizes="96x96" href="/assets/img/favicon/favicon-96.png">
-  <link rel="icon" type="image/png" sizes="192x192" href="/assets/img/favicon/favicon-192.png">
-  <link rel="apple-touch-icon" sizes="180x180" href="/assets/img/favicon/favicon-180.png">
-  <link rel="icon" type="image/png" sizes="512x512" href="/assets/img/favicon/favicon-512.png">
+<!-- Open Graph -->
+<meta property="og:type" content="website">
+<meta property="og:title" content="Mentoring — L8 Resources">
+<meta property="og:description" content="Mentoring resources from Jennifer Bowman and L8: The Butterfly Layer.">
+<meta property="og:image" content="/assets/img/social/og-default.png">
+<meta property="og:url" content="https://butterflylayer.com/resources/mentoring/">
+<meta property="og:site_name" content="L8: The Butterfly Layer">
 
-  <!-- Social / OpenGraph defaults -->
-  <meta property="og:title" content="The Butterfly Layer — L8">
-  <meta property="og:description" content="Where intent, architecture, and elegance shape networks of the future.">
-  <meta property="og:image" content="/assets/img/social/default-share.png">
-  <meta name="twitter:image" content="/assets/img/social/default-share.png">
-</head>
-<body id="top">
-  <div id="header"></div>
+<!-- Twitter -->
+<meta name="twitter:card" content="summary_large_image">
+<meta name="twitter:title" content="Mentoring — L8 Resources">
+<meta name="twitter:description" content="Mentoring resources from Jennifer Bowman and L8: The Butterfly Layer.">
+<meta name="twitter:image" content="/assets/img/social/og-default.png">
 
-  <main id="main" class="site-main container">
-    <header class="page-header">
-      <h1>Mentoring</h1>
-      <p class="page-lead">
-      </p>
-    </header>
+<!-- Primary styles -->
+<link rel="stylesheet" href="/assets/css/variables.css?v=20251125232252">
+<link rel="stylesheet" href="/assets/css/main.css?v=20251125232252">
+<link rel="stylesheet" href="/assets/css/podcast.css?v=20251125232252">
 
-  </main>
+<!-- Page-specific scripts (optional) -->
 
-  <div id="footer"></div>
 
-  <script src="/assets/js/quotes.js?v=20251124162559" defer></script>
-  <script src="/assets/js/loader.js?v=20251124162559" defer></script>
-</body>
+<!-- Shared scripts -->
+<script src="/assets/js/quotes.js?v=20251125232252" defer></script>
+<script src="/assets/js/loader.js?v=20251125232252" defer></script>
+
+<!-- END: content/partials/head.html -->
+
+  </head>
+  <body id="top">
+    <div id="construction-banner-slot"></div>
+    <div id="header"></div>
+
+    <main id="main-content">
+      <!-- BEGIN: content/partials/page_header.html -->
+<header class="page-header">
+  <div class="container flow">
+    <h1>Mentoring</h1>
+    <p class="page-intro">Thoughtful approaches to mentoring and leadership that honor both the architecture and the human in the loop.</p>
+  </div>
+</header>
+<!-- END: content/partials/page_header.html -->
+ 
+      <!-- BEGIN: /content/resources-mentoring.html -->
+        <section class="page-section">
+            <div class="container flow">
+            </div>
+        </section>
+<!-- BEGIN: /content/resources-mentoring.html -->
+        
+    </main>
+
+    <!-- Back to top / subtle footer helper -->
+    <section class="page-section backtotop">
+      <div class="container">
+        <a href="#construction-banner-slot">Back to Top</a>
+      </div>
+    </section>
+
+    <div id="footer"></div>
+  </body>
 </html>
+<!-- END: content/partials/layout.html -->
