--- a/pages/terms/index.html
+++ b/pages/terms/index.html
@@ -1,52 +1,81 @@
-<!-- /site/pages/terms/index.html -->
-<!DOCTYPE html>
+<!-- BEGIN: content/partials/layout.html -->
+<!doctype html>
 <html lang="en">
-<head>
-  <meta charset="utf-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Terms of Use — L8 The Butterfly Layer</title>
+  <head>
+    <!-- BEGIN: content/partials/head.html -->
+<meta charset="utf-8">
+<meta name="viewport" content="width=device-width, initial-scale=1">
 
-  <link rel="stylesheet" href="/assets/css/variables.css?v=20251124162559" />
-  <link rel="stylesheet" href="/assets/css/main.css?v=20251124162559" />
-  <!-- Favicon + Icons -->
-  <link rel="icon" href="/assets/img/favicon/favicon.ico" type="image/x-icon">
-  <link rel="shortcut icon" href="/assets/img/favicon/favicon.ico" type="image/x-icon">
+<title>Terms & Conditions — L8: The Butterfly Layer</title>
+<meta name="description" content="Terms of use for L8: The Butterfly Layer, its content, and all associated digital resources.">
 
-  <link rel="icon" type="image/png" sizes="96x96" href="/assets/img/favicon/favicon-96.png">
-  <link rel="icon" type="image/png" sizes="192x192" href="/assets/img/favicon/favicon-192.png">
-  <link rel="apple-touch-icon" sizes="180x180" href="/assets/img/favicon/favicon-180.png">
-  <link rel="icon" type="image/png" sizes="512x512" href="/assets/img/favicon/favicon-512.png">
+<!-- Open Graph -->
+<meta property="og:type" content="website">
+<meta property="og:title" content="Terms & Conditions — L8: The Butterfly Layer">
+<meta property="og:description" content="Read the terms and conditions for using L8: The Butterfly Layer.">
+<meta property="og:image" content="/assets/img/social/og-default.png">
+<meta property="og:url" content="https://butterflylayer.com/terms/">
+<meta property="og:site_name" content="L8: The Butterfly Layer">
 
-  <!-- Social / OpenGraph defaults -->
-  <meta property="og:title" content="The Butterfly Layer — L8">
-  <meta property="og:description" content="Where intent, architecture, and elegance shape networks of the future.">
-  <meta property="og:image" content="/assets/img/social/default-share.png">
-  <meta name="twitter:image" content="/assets/img/social/default-share.png">
-</head>
-<body id="top">
-  <div id="header"></div>
+<!-- Twitter -->
+<meta name="twitter:card" content="summary_large_image">
+<meta name="twitter:title" content="Terms & Conditions — L8: The Butterfly Layer">
+<meta name="twitter:description" content="Read the terms and conditions for using L8: The Butterfly Layer.">
+<meta name="twitter:image" content="/assets/img/social/og-default.png">
 
-  <main id="main" role="main">
-    <header class="page-header container">
-      <h1>Terms of Use</h1>
-      <p class="page-intro">Simple terms for a clear experience.</p>
-    </header>
+<!-- Primary styles -->
+<link rel="stylesheet" href="/assets/css/variables.css?v=20251125232252">
+<link rel="stylesheet" href="/assets/css/main.css?v=20251125232252">
+<link rel="stylesheet" href="/assets/css/podcast.css?v=20251125232252">
 
-    <section class="container flow">
-      <h2>Use of Content</h2>
-      <p>Content on this site is provided for informational purposes. Please attribute appropriately.</p>
+<!-- Page-specific scripts (optional) -->
 
-      <h2>No Warranties</h2>
-      <p>This site is provided “as is.” We disclaim all liability to the fullest extent permitted by law.</p>
 
-      <h2>Contact</h2>
-      <p>Questions? <a href="mailto:hello@butterflylayer.com">Email us</a>.</p>
+<!-- Shared scripts -->
+<script src="/assets/js/quotes.js?v=20251125232252" defer></script>
+<script src="/assets/js/loader.js?v=20251125232252" defer></script>
+
+<!-- END: content/partials/head.html -->
+
+  </head>
+  <body id="top">
+    <div id="construction-banner-slot"></div>
+    <div id="header"></div>
+
+    <main id="main-content">
+      <!-- BEGIN: content/partials/page_header.html -->
+<header class="page-header">
+  <div class="container flow">
+    <h1>Terms & Conditions</h1>
+    <p class="page-intro">The formal terms that govern use of the L8: The Butterfly Layer website, content, and resources.</p>
+  </div>
+</header>
+<!-- END: content/partials/page_header.html -->
+ 
+      <!-- BEGIN: /content/pages/terms.html -->
+    <section class="page-section">
+      <div class="container flow">
+        <h2>Use of Content</h2>
+        <p>Content on this site is provided for informational purposes. Please attribute appropriately.</p>
+
+        <h2>No Warranties</h2>
+        <p>This site is provided “as is.” We disclaim all liability to the fullest extent permitted by law.</p>
+
+        <h2>Contact</h2>
+        <p>Questions? <a href="mailto:hello@butterflylayer.com">Email us</a>.</p>
+      </div>
     </section>
-  </main>
+<!-- END: /content/pages/terms.html -->
+    </main>
 
-  <div id="footer"></div>
+    <!-- Back to top / subtle footer helper -->
+    <section class="page-section backtotop">
+      <div class="container">
+        <a href="#construction-banner-slot">Back to Top</a>
+      </div>
+    </section>
 
-  <script src="/assets/js/quotes.js?v=20251124162559" defer></script>
-  <script src="/assets/js/loader.js?v=20251124162559" defer></script>
-</body>
+    <div id="footer"></div>
+  </body>
 </html>
+<!-- END: content/partials/layout.html -->
